[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "versioningit", "wheel", ]

[project]
name = "semvergit"
description = "Manage your project's version numbers."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
keywords = [
  "packaging",
  "publishing",
  "release",
  "versioning",
]
authors = [{ name = "Roy Moore", email = "roy@moore.co.il" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gitpython==3.1.40",
    "semver==3.0.2",
    "loguru==0.7.2",
    "click==8.1.7",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
]

[project.scripts]
semvergit = "semvergit.cli:cli"

[project.urls]
homepage = "https://github.com/Tranquility2/semvergit"
repository = "https://github.com/Tranquility2/semvergit"

[tool.versioningit.vcs]
default-tag = "0.0.0"
match = ["v*", ]
method = "git"

[tool.versioningit.tag2version]
rmprefix = "v"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3

[tool.pylint.main]
fail-under = 10.0

[tool.pylint.format]
max-line-length = 120

[tool.coverage.run]
omit = ["semvergit/tests/*", "src/semvergit/__main__.py"]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
